fix(dev): keep fixture manifest field order deterministic
DevelopmentIssuer published the manifest through Map.copyOf, so the
top-level field order varied between JVMs. Keep insertion order and pin the
documented field list in the seed contract (RED reproduced before the fix).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>